// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render table correctly 1`] = `
.c3 {
  padding: 0.5rem 0.75rem;
  font-weight: bold;
}

.c4 {
  padding: 0.5rem 0.75rem;
}

.c2 {
  height: 56px;
  border-bottom: 1px solid #c4cfdd;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  overflow: hidden;
  border-spacing: 0;
  border-collapse: collapse;
  border-style: hidden;
  border-radius: 1rem;
  background-color: #ffffff;
  font-size: 1rem;
  box-shadow: 0 2px 4px 0 #C4CFDD;
  width: 100%;
  text-align: center;
}

.c0 > thead {
  border-bottom: 1px solid #c4cfdd;
  background-color: #fbfbfd;
}

.c0 > tbody > .c1 {
  background-color: #ffffff;
}

.c0 > tbody > .c1:hover {
  background-color: #f6f8fb;
}

<table
  class="c0"
  width="100%"
>
  <thead>
    <tr
      class="c1 c2"
    >
      <th
        class="c3"
      >
        Name
      </th>
      <th
        class="c3"
      >
        Platform
      </th>
      <th
        class="c3"
      >
        People
      </th>
      <th
        class="c3"
      >
        Ammount
      </th>
      <th
        class="c3"
      >
        Action
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      class="c1 c2"
    >
      <td
        class="c4"
      >
        Name 
        1
      </td>
      <td
        class="c4"
      >
        Platform 
        1
      </td>
      <td
        class="c4"
      >
        10,000
      </td>
      <td
        class="c4"
      >
        1,000 NTD
      </td>
      <td
        class="c4"
      >
        Action
      </td>
    </tr>
    <tr
      class="c1 c2"
    >
      <td
        class="c4"
      >
        Name 
        2
      </td>
      <td
        class="c4"
      >
        Platform 
        2
      </td>
      <td
        class="c4"
      >
        10,000
      </td>
      <td
        class="c4"
      >
        1,000 NTD
      </td>
      <td
        class="c4"
      >
        Action
      </td>
    </tr>
    <tr
      class="c1 c2"
    >
      <td
        class="c4"
      >
        Name 
        3
      </td>
      <td
        class="c4"
      >
        Platform 
        3
      </td>
      <td
        class="c4"
      >
        10,000
      </td>
      <td
        class="c4"
      >
        1,000 NTD
      </td>
      <td
        class="c4"
      >
        Action
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table should render table correctly with header and footer 1`] = `
.c5 {
  padding: 0.5rem 0.75rem;
  font-weight: bold;
}

.c6 {
  padding: 0.5rem 0.75rem;
}

.c4 {
  height: 56px;
  border-bottom: 1px solid #c4cfdd;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c2 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  overflow: hidden;
  border-spacing: 0;
  border-collapse: collapse;
  border-style: hidden;
  border-radius: 1rem;
  background-color: #ffffff;
  font-size: 1rem;
  width: 100%;
  text-align: center;
}

.c2 > thead {
  border-bottom: 1px solid #c4cfdd;
  background-color: #fbfbfd;
}

.c2 > tbody > .c3 {
  background-color: #ffffff;
}

.c2 > tbody > .c3:hover {
  background-color: #f6f8fb;
}

.c0 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  overflow: hidden;
  border-radius: 1rem;
  background-color: #ffffff;
  box-shadow: 0 2px 4px 0 #C4CFDD;
  width: 100%;
}

.c0 > .c1 {
  width: 100%;
  border-radius: 0;
  border-top: 1px solid #c4cfdd;
  border-bottom: 1px solid #c4cfdd;
}

<div
  class="c0"
  width="100%"
>
  Header
  <table
    class="c1 c2"
    width="100%"
  >
    <thead>
      <tr
        class="c3 c4"
      >
        <th
          class="c5"
        >
          Name
        </th>
        <th
          class="c5"
        >
          Platform
        </th>
        <th
          class="c5"
        >
          People
        </th>
        <th
          class="c5"
        >
          Ammount
        </th>
        <th
          class="c5"
        >
          Action
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="c3 c4"
      >
        <td
          class="c6"
        >
          Name 
          1
        </td>
        <td
          class="c6"
        >
          Platform 
          1
        </td>
        <td
          class="c6"
        >
          10,000
        </td>
        <td
          class="c6"
        >
          1,000 NTD
        </td>
        <td
          class="c6"
        >
          Action
        </td>
      </tr>
      <tr
        class="c3 c4"
      >
        <td
          class="c6"
        >
          Name 
          2
        </td>
        <td
          class="c6"
        >
          Platform 
          2
        </td>
        <td
          class="c6"
        >
          10,000
        </td>
        <td
          class="c6"
        >
          1,000 NTD
        </td>
        <td
          class="c6"
        >
          Action
        </td>
      </tr>
      <tr
        class="c3 c4"
      >
        <td
          class="c6"
        >
          Name 
          3
        </td>
        <td
          class="c6"
        >
          Platform 
          3
        </td>
        <td
          class="c6"
        >
          10,000
        </td>
        <td
          class="c6"
        >
          1,000 NTD
        </td>
        <td
          class="c6"
        >
          Action
        </td>
      </tr>
    </tbody>
  </table>
  Footer
</div>
`;
